force-app/main/default/objects/Test_Record_Generator__mdt/Test_Record_Generator__mdt.object-meta.xml
<CustomObject>
    <description>Specifies an Apex class that can generate valid test objects for a particular type</description>
    <label>Test Record Generator</label>
    <pluralLabel>Test Record Generators</pluralLabel>
</CustomObject>