force-app/main/default/objects/Test_Record_Generator__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Include namespace, if applicable. Nested classes can be used</description>
    <inlineHelpText>Include namespace, if applicable. Nested classes can be used</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>