force-app/main/default/objects/Test_Record_Generator__mdt/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>JSON parameters used to initialise the TestRecordGenerator</description>
    <inlineHelpText>JSON parameters used to initialise the TestRecordGenerator</inlineHelpText>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>