force-app/main/default/objects/Test_Record_Generator__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Highest priority for a particular SObject and Variant is used. So, a package can define a way of creating a Contact which is then overridden by a higher priority defined in another package with adds required fields</description>
    <inlineHelpText>Highest priority for a particular SObject and Variant is used. So, a package can define a way of creating a Contact which is then overridden by a higher priority defined in another package with adds required fields</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>