force-app/main/default/objects/Test_Record_Generator__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>SObject__c</columns>
    <columns>Variant__c</columns>
    <columns>Priority__c</columns>
    <columns>Apex_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>